gitops/clusters/homelab/infra/traefik-dashboard/middleware-lan-only.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
