gitops/clusters/homelab/infra/traefik-dashboard/middleware-traefik-dashboard-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-stripprefix
  namespace: traefik
spec:
  stripPrefixRegex:
    regex:
      - "^/dashboard"
