gitops/clusters/homelab/infra/traefik-dashboard/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01

    # Aplica el middleware (namespace@kubernetescrd)
    traefik.ingress.kubernetes.io/router.middlewares: traefik-lan-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.local.nasbenito.com
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.local.nasbenito.com
      http:
        paths:
          # Traefik dashboard vive en /dashboard/ (y API en /api)
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
